# PagedPowers

./: CMakeLists.txt  Power.cpp  Power.h  Strategy.cpp  Strategy.h  main.cpp
